Updates on metrics security + application properties